; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_closures.c_zend_closure_compare.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_closures.c_zend_closure_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @zend_closure_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zend_closure_compare(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @ZEND_COMPARE_OBJECTS_FALLBACK(i32* %5, i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @Z_OBJ_P(i32* %8)
  %10 = load i32*, i32** %4, align 8
  %11 = call i64 @Z_OBJ_P(i32* %10)
  %12 = icmp ne i64 %9, %11
  %13 = zext i1 %12 to i32
  ret i32 %13
}

declare dso_local i32 @ZEND_COMPARE_OBJECTS_FALLBACK(i32*, i32*) #1

declare dso_local i64 @Z_OBJ_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
